--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
   <body>
     <header class="header">
       <div class="container">
-        <img src="./assets/logo.png" alt="logo youth" />
-        <nav class="navbar">
-          <ul>
-            <li><a href="#home">home</a></li>
-            <li><a href="#about">about</a></li>
-            <li><a href="#products">products</a></li>
-            <li><a href="#contacts">contacts</a></li>
+        <img src="./assets/logo.png" alt="logo youth" class="header__logo"/>
+        <nav class="nav">
+          <ul class="menu">
+            <li class="menu__item"><a href="#home" class="menu__link">home</a></li>
+            <li class="menu__item"><a href="#about" class="menu__link">about</a></li>
+            <li class="menu__item"><a href="#products" class="menu__link">products</a></li>
+            <li class="menu__item"><a href="#contacts" class="menu__link">contacts</a></li>
           </ul>
         </nav>
       </div>
     </header>
-    <main>
-      <section>
+    <main class="">
+      <section class="container">
         <div>
         <h4>Lingerie Shop</h4>
         <h2 id="home">Lorem ipsum dolor sit amet</h2>
